// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchBar /> should render allFacilitiesCheckbox when searchType = "lot" & showCheckbox="true" 1`] = `
<div
  className="searchBarDiv"
>
  <div
    className="ms-TextField root searchBarTextField ms-TextField--borderless rootIsBorderless"
  >
    <div
      className="ms-TextField-wrapper wrapper"
    >
      <div
        className="ms-TextField-fieldGroup fieldGroup"
      >
        <div
          className="ms-TextField-prefix fieldPrefixSuffix"
        >
          <button
            aria-describedby={null}
            aria-expanded={false}
            aria-haspopup={true}
            aria-labelledby={null}
            aria-owns={null}
            className="ms-Button searchTypesMenuButton ms-Button--default root-37"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <div
              className="ms-Button-flexContainer flexContainer-38"
            >
              <div
                className="ms-Button-textContainer textContainer-39"
              >
                <div
                  className="ms-Button-label label-41"
                  id="id__10"
                >
                  Lot
                </div>
              </div>
              <i
                aria-hidden={true}
                className="ms-Button-menuIcon menuIcon-45"
                data-icon-name="ChevronDown"
                role="presentation"
              />
            </div>
          </button>
        </div>
        <input
          aria-invalid={false}
          className="ms-TextField-field field"
          id="TextField8"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          placeholder="Type here to Search"
          type="text"
          value=""
        />
        <div
          className="ms-TextField-suffix fieldPrefixSuffix"
        >
          <button
            aria-describedby={null}
            aria-labelledby={null}
            className="ms-Button ms-Button--icon root-46"
            data-is-focusable={true}
            onClick={[Function]}
            title="Search"
            type="button"
          >
            <div
              className="ms-Button-flexContainer flexContainer-38"
            >
              <i
                aria-hidden={true}
                className="ms-Button-icon icon-48"
                data-icon-name="search"
                role="presentation"
              />
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SearchBar /> should render properly 1`] = `
<div
  className="searchBarDiv"
>
  <div
    className="ms-TextField root searchBarTextField ms-TextField--borderless rootIsBorderless"
  >
    <div
      className="ms-TextField-wrapper wrapper"
    >
      <div
        className="ms-TextField-fieldGroup fieldGroup"
      >
        <div
          className="ms-TextField-prefix fieldPrefixSuffix"
        >
          <button
            aria-describedby={null}
            aria-expanded={false}
            aria-haspopup={true}
            aria-labelledby={null}
            aria-owns={null}
            className="ms-Button searchTypesMenuButton ms-Button--default root-37"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <div
              className="ms-Button-flexContainer flexContainer-38"
            >
              <div
                className="ms-Button-textContainer textContainer-39"
              >
                <div
                  className="ms-Button-label label-41"
                  id="id__2"
                >
                  Lot
                </div>
              </div>
              <i
                aria-hidden={true}
                className="ms-Button-menuIcon menuIcon-45"
                data-icon-name="ChevronDown"
                role="presentation"
              />
            </div>
          </button>
        </div>
        <input
          aria-invalid={false}
          className="ms-TextField-field field"
          id="TextField0"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          placeholder="Type here to Search"
          type="text"
          value=""
        />
        <div
          className="ms-TextField-suffix fieldPrefixSuffix"
        >
          <button
            aria-describedby={null}
            aria-labelledby={null}
            className="ms-Button ms-Button--icon root-46"
            data-is-focusable={true}
            onClick={[Function]}
            title="Search"
            type="button"
          >
            <div
              className="ms-Button-flexContainer flexContainer-38"
            >
              <i
                aria-hidden={true}
                className="ms-Button-icon icon-48"
                data-icon-name="search"
                role="presentation"
              />
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
